# best-practices

./: .gitignore  pyproject.toml
src/best_practices/: __init__.py  console.py
