[tool.poetry]
name = "best_practices"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["eredgan <mahendranath.reddy@ericsson.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/mreddy1992/best-practices"
repository = "https://github.com/mreddy1992/best-practices"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
requests = "^2.27.1"

[tool.poetry.scripts]
best-practices = "best_practices.console:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
